[gd_scene load_steps=10 format=3 uid="uid://ubkh822o5t41"]

[ext_resource type="Script" path="res://Scripts/skeleton_enemy.gd" id="1_arqqp"]
[ext_resource type="Texture2D" uid="uid://da1xus0gjgv5w" path="res://Assets/Dungeon Assets/skeleton_.png" id="1_wrnix"]

[sub_resource type="AtlasTexture" id="AtlasTexture_35mlj"]
atlas = ExtResource("1_wrnix")
region = Rect2(144, 126, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypa7m"]
atlas = ExtResource("1_wrnix")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l4qf"]
atlas = ExtResource("1_wrnix")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy1ro"]
atlas = ExtResource("1_wrnix")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3kba"]
atlas = ExtResource("1_wrnix")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fp1ao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35mlj")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypa7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l4qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy1ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3kba")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37gip"]
size = Vector2(12, 17)

[node name="skeleton_enemy" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_arqqp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_fp1ao")
animation = &"Death"
autoplay = "default"
frame_progress = 0.547298
flip_h = true

[node name="RayCastRight" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 5)
target_position = Vector2(12, 0)

[node name="RayCastLeft" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 5)
target_position = Vector2(-10, 0)

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Enemy"]]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_37gip")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="handle_hit"]
